# 2026SE_MLOpsTask_Thribhu.K

./: .env.example  .gitignore  README.md  pyproject.toml  software-todo.md
.devcontainer/: devcontainer.json
Deployment/: db.py  logger.py  main.py
Deployment/static/: style.css
Deployment/templates/: index.html  login_overlay.html
Design/: Design.ipynb
Diagrams/: SE Task 2.docx
Model_Development/: 0.analysis.ipynb  0.analysis_twitter.ipynb  1.preprocess.ipynb  2.feature_engineer.ipynb  3.model_training.ipynb  4.model_testing.ipynb  data_wrangling.ipynb  junk.ipynb  points_of_importance.md  test2.ipynb  utils.py
Model_Development/csv/: sentiment_model.pkl  tfidf_dump.pkl
common/: test.py  train.py  utils.py
